--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "glob": "^7.1.3",
     "mongoose": "^5.3.4",
     "morgan": "^1.9.1",
     "react": "^16.5.2",
