--- a/package.json
+++ b/package.json
@@ -66,6 +66,11 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "glob": "^7.1.3",
+    "koa": "^2.6.1",
+    "koa-bodyparser": "^4.2.1",
+    "koa-json": "^2.0.2",
+    "koa-logger": "^3.2.0",
+    "koa-router": "^7.4.0",
     "mongoose": "^5.3.4",
     "morgan": "^1.9.1",
     "react": "^16.5.2",
