--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "server": "nodemon testServer/server.js"
+    "server": "nodemon koaServer/app.js"
   },
   "devDependencies": {
     "@babel/core": "7.1.0",
