--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
+    "koa-session": "^5.9.0",
     "mongoose": "^5.3.4",
     "morgan": "^1.9.1",
     "react": "^16.5.2",
