--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "utility": "^1.15.0"
   },
   "eslintConfig": {
     "extends": "react-app"
