--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "koa-session": "^5.9.0",
     "mongoose": "^5.3.4",
     "morgan": "^1.9.1",
+    "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
