--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "antd-mobile": "^2.2.5",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "browser-cookies": "^1.2.0",
     "express": "^4.16.4",
     "glob": "^7.1.3",
     "koa": "^2.6.1",
