--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "koa-session": "^5.9.0",
+    "koa-socket": "^4.4.0",
     "mongoose": "^5.3.4",
     "morgan": "^1.9.1",
     "prop-types": "^15.6.2",
