--- a/package.json
+++ b/package.json
@@ -88,7 +88,11 @@
     "utility": "^1.15.0"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "rules": {
+      "eqeqeq": "off",
+      "jsx-a11y/accessible-emoji": [0]
+    }
   },
   "browserslist": [
     ">0.2%",
