--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "koa-router": "^7.4.0",
     "koa-session": "^5.9.0",
     "koa-socket": "^4.4.0",
+    "koa-static": "^5.0.0",
     "mongoose": "^5.3.4",
     "morgan": "^1.9.1",
     "prop-types": "^15.6.2",
@@ -91,7 +92,9 @@
     "extends": "react-app",
     "rules": {
       "eqeqeq": "off",
-      "jsx-a11y/accessible-emoji": [0]
+      "jsx-a11y/accessible-emoji": [
+        0
+      ]
     }
   },
   "browserslist": [
